--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /DoItAlgorithm/DoItAlgorithm.vcxproj.filters
 /DoItAlgorithm/DoItAlgorithm.vcxproj
+/DoItAlgorithm/baek.cpp
